# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.788 2010/04/15 15:35:04 mpagano Exp $

*git-sources-2.6.34_rc4-r3 (15 Apr 2010)

  15 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc4-r3.ebuild:
  Version bump

*git-sources-2.6.34_rc4-r2 (14 Apr 2010)

  14 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc4-r2.ebuild:
  Version bump

*git-sources-2.6.34_rc4-r1 (14 Apr 2010)

  14 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc4-r1.ebuild:
  Version bump

*git-sources-2.6.34_rc4 (13 Apr 2010)

  13 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc4.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r10 (10 Apr 2010)

  10 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r10.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r9 (09 Apr 2010)

  09 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r9.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r8 (08 Apr 2010)
*git-sources-2.6.34_rc3-r7 (08 Apr 2010)

  08 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r7.ebuild, +git-sources-2.6.34_rc3-r8.ebuild:
  Version bumps

*git-sources-2.6.34_rc3-r6 (07 Apr 2010)

  07 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r6.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r5 (06 Apr 2010)

  06 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r5.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r4 (06 Apr 2010)

  06 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r4.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r3 (06 Apr 2010)

  06 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r3.ebuild:
  Version bump

  05 Apr 2010; Michael Pagano <mpagano@gentoo.org> ChangeLog:
  Version bump
