@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.788 2010/04/15 15:35:04 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.789 2010/04/16 01:09:05 mpagano Exp $
+
+*git-sources-2.6.34_rc4-r4 (16 Apr 2010)
+
+  16 Apr 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.34_rc4-r4.ebuild:
+  Version bump
 
 *git-sources-2.6.34_rc4-r3 (15 Apr 2010)
 
